fix boton ios

--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -134,6 +134,7 @@ h2{
 	}
 	.purchase{
 		font-size:22px;
+		width:250px;
 	}
 	.btn small{
 		font-size:11px;
